# project-chimera

./: .coderabbit.yaml  .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
.cursor/: rules
.github/workflows/: main.yml
research/: architecture_strategy.md  tooling_strategy.md
scripts/: spec_check.py
skills/: README.md
specs/: _meta.md  functional.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
